--- a/config.yml
+++ b/config.yml
@@ -8,7 +8,7 @@ site:
 profile:
   title: Hello,
   subtitle: Welcome to My Navigation
-  description: Front-end Developer / Open Source Enthusiast / Blogger
+  description:
 
 # 导航菜单
 navigation:
