--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,27 +9,27 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: '16'
           
       - name: Install dependencies
-        run: |
-          npm init -y
-          npm install js-yaml
+        run: npm install
           
       - name: Generate site
         run: node generator.js
         
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@4.1.4
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages
           folder: .
+          branch: gh-pages
           clean: true 
