--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,34 +22,14 @@ jobs:
           node-version: '16'
           
       - name: Install dependencies
-        run: |
-          npm init -y
-          npm install js-yaml
+        run: npm install
           
       - name: Generate site
         run: node generator.js
         
-      - name: Prepare deployment
-        run: |
-          # 确保目录存在
-          mkdir -p dist
-          
-          # 复制网站文件
-          cp index.html dist/
-          cp style.css dist/
-          cp script.js dist/
-          
-          # 显示文件列表以验证
-          echo "Deployment files:"
-          ls -la dist/
-          
-          # 检查文件内容
-          echo "Checking index.html..."
-          head -n 10 dist/index.html
-          
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: dist
+          folder: .
           branch: gh-pages
           clean: true 
