--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "menav",
-  "version": "1.0.0",
+  "version": "1.2.3",
   "description": "A personal navigation website",
   "main": "generator.js",
+  "homepage": "https://RZLNB.github.io/menav",
   "scripts": {
-    "generate": "node generator.js"
+    "generate": "node generator.js",
+    "dev": "node generator.js && serve .",
+    "clean": "rm -rf index.html"
   },
   "keywords": [
     "navigation",
@@ -15,5 +18,8 @@
   "license": "MIT",
   "dependencies": {
     "js-yaml": "^4.1.0"
+  },
+  "devDependencies": {
+    "serve": "^14.2.1"
   }
 } 
