--- a/package.json
+++ b/package.json
@@ -17,7 +17,14 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "ansi-regex": "^6.0.1",
+    "ansi-styles": "^6.2.1",
+    "supports-color": "^9.4.0",
+    "has-flag": "^5.0.1",
+    "color-convert": "^2.0.1",
+    "color-name": "^2.0.0",
+    "mime-db": "^1.52.0"
   },
   "devDependencies": {
     "serve": "^14.2.1"
