--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,16 @@
-# 依赖目录
+# 依赖相关
 node_modules/
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
-# IDE 配置
+# 构建输出
+dist/
+
+# IDE/编辑器配置
 .vscode/
 .idea/
-*.sublime-project
-*.sublime-workspace
 .specstory
 .cursorindexingignore
 
 # 系统文件
 .DS_Store
 Thumbs.db
-
-# 环境变量
-.env
-.env.local
-.env.*.local
-
-# 日志文件
-*.log
-logs/
-
-# 用户配置文件
-config.user.yml 
