--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,11 @@ dist/
 # 系统文件
 .DS_Store
 Thumbs.db
+
+# Bookmark import files
+bookmarks/*
+!bookmarks/bookmarks_sample.html
+!bookmarks/README.md
+!bookmarks/.gitkeep
+test-bookmarks.ps1
+test-bookmarks.sh
