--- a/config/user/navigation.yml
+++ b/config/user/navigation.yml
@@ -1,22 +1,22 @@
 - name: 首页
   icon: fas fa-home
-  id: "1home"
+  id: "home"
   active: true
 - name: 自部署项目
   icon: fas fa-project-diagram
-  id: 2projects
+  id: projects
 - name: 摸鱼充电
   icon: fas fa-coffee
-  id: 3_recharge
+  id: recharge
 - name: 学习资源
   icon: fas fa-graduation-cap
-  id: 4_study
+  id: study
 - name: 兴趣部落
   icon: fas fa-users
-  id: 5_interest
+  id: interest
 - name: 工具箱
   icon: fas fa-toolbox
-  id: 6_toolbox
+  id: toolbox
 - name: 临时停靠港
   icon: fas fa-clock
-  id: 7_temp
+  id: temp
