--- a/config/user/navigation.yml
+++ b/config/user/navigation.yml
@@ -7,16 +7,16 @@
   id: projects
 - name: 摸鱼充电
   icon: fas fa-coffee
-  id: recharge
+  id: "recharge"
 - name: 学习资源
   icon: fas fa-graduation-cap
-  id: study
+  id: "study"
 - name: 兴趣部落
   icon: fas fa-users
-  id: interest
+  id: "interest"
 - name: 工具箱
   icon: fas fa-toolbox
-  id: toolbox
+  id: "toolbox"
 - name: 临时停靠港
   icon: fas fa-clock
-  id: temp
+  id: "temp"
