--- a/package.json
+++ b/package.json
@@ -25,13 +25,11 @@
     "handlebars": "^4.7.8",
     "ansi-regex": "^6.0.1",
     "ansi-styles": "^6.2.1",
+    "supports-color": "^9.4.0",
+    "has-flag": "^5.0.1",
     "color-convert": "^2.0.1",
     "color-name": "^2.0.0",
-    "has-flag": "^5.0.1",
-    "js-yaml": "^4.1.0",
-    "menav": "file:",
-    "mime-db": "^1.52.0",
-    "supports-color": "^9.4.0"
+    "mime-db": "^1.52.0"
   },
   "devDependencies": {
     "serve": "^14.2.1"
