fix: 修复自部署项目ID格式，添加引号以保持一致性

--- a/config/user/navigation.yml
+++ b/config/user/navigation.yml
@@ -4,7 +4,7 @@
   active: true
 - name: 自部署项目
   icon: fas fa-project-diagram
-  id: 2_projects
+  id: "2_projects"
   active: false
 - name: 摸鱼充电
   icon: fas fa-coffee
